--- a/src/App.css
+++ b/src/App.css
@@ -196,3 +196,9 @@ button:active {
   text-align: center;
   font-size: 0.8em;
 }
+.error {
+  text-align: center;
+  margin: 20px 0;
+  color: red;
+
+}
